@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Add versions to all modules
+    - Add upsert support
 
 0.000011  2025-06-07 15:36:38-07:00 America/Los_Angeles
 
